--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:isScrollContainer="true"
-    android:background="@color/bg_white_0"
+    android:background="@drawable/grad_main_mint"
     tools:context=".MainActivity">
 
     <TextView
@@ -27,14 +27,15 @@
         android:id="@+id/etxt_main_loginID"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/bg_login"
+        android:background="#a3ffffff"
         android:paddingTop="8dp"
         android:paddingBottom="8dp"
-        android:layout_marginLeft="80dp"
-        android:layout_marginRight="80dp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
         android:layout_marginTop="80dp"
         android:paddingLeft="8dp"
         android:paddingRight="8dp"
+        android:paddingVertical="14dp"
         android:ems="10"
         android:hint="아이디"
         android:inputType="textPersonName"
@@ -48,13 +49,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:background="@drawable/bg_login"
+        android:background="#a3ffffff"
         android:paddingTop="8dp"
         android:paddingBottom="8dp"
         android:paddingLeft="8dp"
         android:paddingRight="8dp"
-        android:layout_marginLeft="80dp"
-        android:layout_marginRight="80dp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:paddingVertical="14dp"
         android:ems="10"
         android:hint="비밀번호"
         android:inputType="textPassword"
@@ -65,34 +67,40 @@
 
     <Button
         android:id="@+id/btn_main_login"
-        android:layout_width="150dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:minHeight="36dp"
         android:minWidth="64dp"
         android:paddingHorizontal="16dp"
-        android:layout_marginTop="40dp"
-        android:background="@drawable/grad_main_mint"
+        android:paddingVertical="8dp"
+        android:layout_marginHorizontal="110dp"
+        android:layout_marginTop="80dp"
+        android:background="@color/bg_white_0"
         android:elevation="2dp"
         android:text="로그인"
-        android:textColor="@color/main_black_0"
+        android:textColor="@color/dark_mint_0"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
         android:onClick="OnLoginClicked"/>
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="150dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/bg_white_1"
+        android:background="@color/bg_white_0"
         android:elevation="2dp"
         android:minHeight="36dp"
         android:minWidth="64dp"
         android:paddingHorizontal="16dp"
         android:layout_marginTop="28dp"
+        android:layout_marginHorizontal="110dp"
         android:text="관리자로 로그인"
-        android:textColor="@color/main_black_0"
+        android:paddingVertical="8dp"
+        android:textColor="@color/dark_mint_0"
+        android:textAlignment="center"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_main_login"
