--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     
     <color name="main_black_0">#212121</color>
     <color name="main_black_1">#484848</color>
+    <color name="main_black_2">#bebebe</color>
 
     <color name="main_purple_0">#7d7fcb</color>
     <color name="main_purple_1">#7366cc</color>
