--- a/app/src/main/res/layout/frag_field_reserve.xml
+++ b/app/src/main/res/layout/frag_field_reserve.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/bg_white_0">
+    android:background="@color/transparent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout_field_leftnum_title"
