--- a/app/src/main/res/layout/frag_manager_setting.xml
+++ b/app/src/main/res/layout/frag_manager_setting.xml
@@ -1,18 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/bg_white_1">
+    android:background="@color/transparent">
 
-    <TextView
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingHorizontal="60dp"
+        android:paddingVertical="10dp"
+        android:layout_marginTop="100dp"
+        android:text="개 인 정 보"
+        android:textAlignment="center"
+        android:textSize="30sp"
+        android:textColor="@color/main_black_0"
+        android:background="@drawable/grad_main_mint"
+        android:elevation="2dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:text="setting"/>
-
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
