--- a/app/src/main/res/layout/manager_main.xml
+++ b/app/src/main/res/layout/manager_main.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/bg_white_1">
 
     <FrameLayout
         android:id="@+id/manager_content"
@@ -12,14 +13,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="@color/bg_white_0">
+        android:background="@color/transparent">
     </FrameLayout>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationView_manager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/main_mint_0"
+        android:background="@color/bg_white_0"
         android:elevation="8dp"
         android:paddingTop="4dp"
         android:paddingBottom="8dp"
