--- a/app/src/main/res/layout/frag_manager_leftnum.xml
+++ b/app/src/main/res/layout/frag_manager_leftnum.xml
@@ -44,5 +44,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:onClick="OnReserveEndButtonClicked"/>
+        android:onClick=""/>
 </androidx.constraintlayout.widget.ConstraintLayout>
