--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -65,7 +65,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etxt_main_loginID" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_main_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -77,6 +77,7 @@
         android:layout_marginTop="80dp"
         android:background="@color/bg_white_0"
         android:elevation="2dp"
+        android:gravity="center"
         android:text="로그인"
         android:textColor="@color/dark_mint_0"
         android:textSize="24sp"
@@ -85,12 +86,13 @@
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
         android:onClick="OnLoginClicked"/>
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/bg_white_0"
         android:elevation="2dp"
+        android:gravity="center"
         android:minHeight="36dp"
         android:minWidth="64dp"
         android:paddingHorizontal="16dp"
