--- a/app/src/main/res/layout/frag_manager_setting.xml
+++ b/app/src/main/res/layout/frag_manager_setting.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/transparent">
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button_manager_setting_profile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -23,7 +23,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button_manager_setting_leftnum"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
