--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,14 +10,16 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" tools:targetApi="l">@color/main_mint_1</item>
         <!-- Customize your theme here. -->
     </style>
 
-    <style name="ThemeCre" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="ThemeCre" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="android:textViewStyle">@style/CustomTextViewStyle</item>
-        <item name="android:buttonStyle">@style/CustomButtonStyle</item>
-        <item name="android:editTextStyle">@style/CustomEditTextViewStyle</item>
+        <item name="buttonStyle">@style/CustomButtonStyle</item>
+        <item name="editTextStyle">@style/CustomEditTextViewStyle</item>
+        <item name="textInputStyle">@style/CustomTextInputLayoutStyle</item>
+        <item name="statusBarBackground"></item>
 
     </style>
 
@@ -25,11 +27,15 @@
         <item name="android:fontFamily">@font/godo_m</item>
     </style>
 
-    <style name="CustomButtonStyle" parent="android:Widget.Holo.Button">
+    <style name="CustomButtonStyle" parent="Widget.AppCompat.Button">
         <item name="android:fontFamily">@font/godo_m</item>
     </style>
 
     <style name="CustomEditTextViewStyle" parent="Widget.AppCompat.EditText">
         <item name="android:fontFamily">@font/godo_m</item>
+    </style>
+
+    <style name="CustomTextInputLayoutStyle" parent="Widget.Design.TextInputLayout">
+        <item name="fontFamily">@font/godo_m</item>
     </style>
 </resources>
