--- a/app/src/main/res/layout/frag_manager_leftnum.xml
+++ b/app/src/main/res/layout/frag_manager_leftnum.xml
@@ -14,8 +14,7 @@
         android:text="실시간 잔여물량"
         android:textSize="40dp"
         android:background="@drawable/grad_main_mint"
-        android:textStyle="bold"
-        android:textColor="@color/main_black_0"
+        android:textColor="@color/white"
         android:paddingVertical="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -36,10 +35,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="예 약 마 감"
-        android:textSize="24dp"
-        android:textColor="@color/main_black_0"
-        android:background="@drawable/grad_main_mint"
+        android:textSize="18sp"
+        android:textColor="@color/white"
+        android:background="@drawable/grad_main_mint_round"
         android:paddingHorizontal="50dp"
+        android:paddingVertical="10dp"
         android:layout_marginBottom="100dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
