--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -80,7 +80,7 @@
         android:gravity="center"
         android:text="로그인"
         android:textColor="@color/dark_mint_0"
-        android:textSize="24sp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
@@ -90,7 +90,7 @@
         android:id="@+id/button2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/bg_white_0"
+        android:background="@color/dark_mint_0"
         android:elevation="2dp"
         android:gravity="center"
         android:minHeight="36dp"
@@ -100,9 +100,9 @@
         android:layout_marginHorizontal="110dp"
         android:text="관리자로 로그인"
         android:paddingVertical="8dp"
-        android:textColor="@color/dark_mint_0"
+        android:textColor="@color/white"
         android:textAlignment="center"
-        android:textSize="24sp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_main_login"
