--- a/app/src/main/res/layout/frag_manager_setting.xml
+++ b/app/src/main/res/layout/frag_manager_setting.xml
@@ -16,8 +16,7 @@
         android:text="개 인 정 보"
         android:textAlignment="center"
         android:textSize="30sp"
-        android:textColor="@color/main_black_0"
-        android:background="@drawable/grad_main_mint"
+        android:background="@drawable/grad_main_mint_round"
         android:elevation="2dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -27,14 +26,13 @@
         android:id="@+id/button_manager_setting_leftnum"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/grad_main_mint"
+        android:background="@drawable/grad_main_mint_round"
         android:elevation="2dp"
         android:paddingHorizontal="60dp"
         android:paddingVertical="10dp"
         android:layout_marginBottom="200dp"
         android:text="물 량 관 리"
         android:textAlignment="center"
-        android:textColor="@color/main_black_0"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
