--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,19 +9,19 @@
     <color name="white">#FFFFFFFF</color>
     <color name="transparent">#00000000</color>
 
-    <color name="main_mint_0">#32e0c4</color>
-    <color name="main_mint_1">#0d7377</color>
+    <color name="main_mint_0">#74ebd5</color>
+    <color name="main_mint_1">#138671</color>
     
     <color name="main_black_0">#212121</color>
     <color name="main_black_1">#484848</color>
     <color name="main_black_2">#bebebe</color>
 
-    <color name="main_purple_0">#7d7fcb</color>
+    <color name="main_purple_0">#ACB6E5</color>
     <color name="main_purple_1">#7366cc</color>
     
     <color name="bg_white_0">#eeeeee</color>
     <color name="bg_white_1">#e0e0e0</color>
 
-    <color name="dark_mint_0">#00ad94</color>
+    <color name="dark_mint_0">#308a9c</color>
 
 </resources>
