--- a/app/src/main/res/layout/field_main.xml
+++ b/app/src/main/res/layout/field_main.xml
@@ -23,7 +23,7 @@
         android:id="@+id/bottomNavigationView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/bg_white_0"
+        android:background="@color/white"
         android:elevation="8dp"
         android:paddingTop="4dp"
         android:paddingBottom="8dp"
