--- a/app/src/main/res/layout/frag_field_reserve.xml
+++ b/app/src/main/res/layout/frag_field_reserve.xml
@@ -4,25 +4,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/transparent">
+    android:background="@color/bg_white_0">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout_field_leftnum_title"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="56dp"
         android:background="@drawable/grad_main_mint"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:id="@+id/image_leftnum"
-            android:layout_width="100dp"
-            android:layout_height="match_parent"
-            android:padding="10dp"
-            android:src="@drawable/ic_data_mining"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_outline_book_online_24"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -33,11 +32,11 @@
             android:id="@+id/textView"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:gravity="center"
+            android:gravity="center_vertical"
             android:text="예약하기"
-            android:textAlignment="center"
-            android:textSize="34sp"
+            android:textSize="20sp"
             android:textColor="@color/main_black_0"
+            android:paddingLeft="32dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/imageButton_field_reserve_add"
             app:layout_constraintStart_toEndOf="@id/image_leftnum"
@@ -47,9 +46,9 @@
 
         <ImageButton
             android:id="@+id/imageButton_field_reserve_add"
-            android:layout_width="100dp"
-            android:layout_height="match_parent"
-            android:scaleType="fitCenter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:scaleType="center"
             android:src="@drawable/ic_baseline_add_circle_24"
             android:background="@color/transparent"
             app:layout_constraintBottom_toBottomOf="parent"
