--- a/app/src/main/res/layout/frag_manager_leftnum.xml
+++ b/app/src/main/res/layout/frag_manager_leftnum.xml
@@ -4,18 +4,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/transparent">
+    android:background="@color/bg_white_0">
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
+        android:layout_height="56dp"
+        android:gravity="center_vertical"
         android:text="실시간 잔여물량"
-        android:textSize="40dp"
+        android:textSize="20dp"
+        android:textStyle="bold"
         android:background="@drawable/grad_main_mint"
-        android:textColor="@color/white"
-        android:paddingVertical="10dp"
+        android:textColor="@color/main_black_0"
+        android:paddingLeft="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -36,11 +37,10 @@
         android:layout_height="wrap_content"
         android:text="예 약 마 감"
         android:textSize="18sp"
-        android:textColor="@color/white"
         android:background="@drawable/grad_main_mint_round"
         android:paddingHorizontal="50dp"
         android:paddingVertical="10dp"
-        android:layout_marginBottom="100dp"
+        android:layout_marginBottom="40dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
