--- a/app/src/main/res/layout/frag_manager_placing.xml
+++ b/app/src/main/res/layout/frag_manager_placing.xml
@@ -28,7 +28,7 @@
         android:id="@+id/recyclerView_frag_manager_placing"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:paddingBottom="15dp"
+        android:paddingVertical="18dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
