--- a/app/src/main/res/layout/frag_manager_setting.xml
+++ b/app/src/main/res/layout/frag_manager_setting.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/transparent">
+    android:background="@color/bg_white_0">
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button_manager_setting_profile"
