--- a/app/src/main/res/layout/item_placing.xml
+++ b/app/src/main/res/layout/item_placing.xml
@@ -5,7 +5,8 @@
     android:layout_height="wrap_content"
     android:background="@drawable/bg_card"
     android:layout_marginHorizontal="10dp"
-    android:layout_marginVertical="18dp">
+    android:layout_marginBottom="18dp"
+    android:elevation="2dp">
 
     <TextView
         android:id="@+id/textView_item_placing_field"
