--- a/app/src/main/res/layout/manager_main.xml
+++ b/app/src/main/res/layout/manager_main.xml
@@ -20,7 +20,7 @@
         android:id="@+id/bottomNavigationView_manager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/bg_white_0"
+        android:background="@color/white"
         android:elevation="8dp"
         android:paddingTop="4dp"
         android:paddingBottom="8dp"
